<resources>
    <string name="app_name">edu trio</string>
    <string name="submit">Submit</string>
    <string name="question">Question</string>
    <string name="answers">Answers</string>
    <string name="supplementory">Supplementory</string>
    <string name="subject">Subject</string>
    <string name="year">Year</string>
    <string name="discipline">Class</string>
    <string name="group">Group</string>
    <string name="board">Board</string>
    <string name="school">School</string>
    <string name="college">College</string>
    <string name="uni">University</string>
    <string name="bise_grw">Bise Grw</string>
</resources>